# proof-of-concepts

backstage-poc/: .gitignore  app-config.yaml  docker-compose.yml
dotnet-ecommerce/: dotnet-ecommerce.sln
dotnet-jwt-auth/: .gitignore
elixir-phoenix/: README.md  mix.exs
go_api/: go.mod  go.sum
go_boilerplate/: Dockerfile  go.mod
go_cli/: go.mod  main.go
go_tui/: go.mod  main.go
masstransit-rabbitmq/: POC.Rabbitmq.sln
nodejs-azure-serverless/: .gitignore  .lintstagedrc.json  LICENSE  README.md  jest.config.js  package.json  serverless.yml
nodejs-cli/: .editorconfig  .env.example  .eslintrc.json  CHANGELOG.md  README.md  docker-compose.yml  jest.config.json  package.json  tsconfig.json
nodejs-mailer/: README.md  package.json
nodejs-nestjs-ecommerce/: .env  Dockerfile  docker-compose.yml  package-lock.json  package.json
nodejs-nextjs-ecommerce/: package-lock.json
nodejs-nextjs-stripe/: package-lock.json  package.json
nodejs-prisma-orm/: .env.example  .gitignore  README.md  package.json  tsconfig.json
nodejs-socket-io-chat/: README.md  package.json
nodejs-typescript-api-onion-arch/: .dockerignore  .env.example  .eslintrc.json  .gitignore  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
nodejs-typescript-boilerplate/: .eslintrc.json  .gitignore  Dockerfile  README.md  package.json  (+1 more)
rocket-api/: Cargo.toml
rocket-api/http/: create_bakery.http  list_bakeries.http
rocket-api/src/: main.rs  setup.rs
rocket-api/src/entities/: mod.rs  prelude.rs
rust_seaorm/: .env  Cargo.toml
rust_seaorm/src/: main.rs
(+296 files in other folders)
